# copy-cat-taurifying

./: LICENSE  README.md  copy-cat_0.1.0_x64_en-US.msi  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs
src/components/: FilterInput.tsx  floatingWindow.tsx
src/json/: FORMAT_TYPE.ts
