[package]
name = "copy-cat"
version = "0.1.0"
description = "A Tauri App"
authors = ["prasanna"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-clipboard = "2.1.11"
active-win-pos-rs = "0.9.0"
tauri-plugin-opener = "2.2.6"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-notification = "2.2.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
